--- a/app/src/main/res/layout/prof_item.xml
+++ b/app/src/main/res/layout/prof_item.xml
@@ -17,11 +17,11 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/prof_image"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_gravity="center"
             android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_height="match_parent"
+            android:layout_marginLeft="2dp"
+            android:layout_height="65dp"
             android:src="@mipmap/ic_launcher"/>
         <LinearLayout
             android:orientation="vertical"
